@@ -19,7 +19,7 @@ test = function(num,x,y=NULL,error,warning,output) {
     .lasttest <<- num
     ntest <<- ntest + 1
     lastnum <<- num
-    err <- if (missing(output)) try(x,TRUE) else out<-capture.output(try(x,TRUE))
+    err <- if (missing(output)) try(x,TRUE) else out<-paste(capture.output(try(x,TRUE)),collapse="")
     if (!missing(error) || !missing(warning)) {
         type = ifelse(!missing(error),"error","warning")
         patt = txt = ifelse(!missing(error),error,warning)
@@ -48,8 +48,9 @@ test = function(num,x,y=NULL,error,warning,output) {
         output = gsub("[)]","[)]",output)
         if (!length(grep(output,out))) {
             cat("Test",num,"didn't produce correct output:\n")
-            cat("Expected:",output,"\n")
-            cat("Observed:",out,"\n")
+            cat("Expected: '",output,"'\n",sep="")
+            cat("Observed: '",out,"'\n",sep="")
+            browser()
             nfail <<- nfail + 1
             whichfail <<- c(whichfail, num)
             return()
@@ -2161,6 +2162,14 @@ map = c("A"="Foo",B="Bar",C="Baz")
 DT[,b:=map[b]]
 test(775, names(DT$b), NULL)
 
+# Test that names of named vectors don't carry through, #2307.
+DT = data.table(a=1:3,b=c("a"="a","b"="a","c"="b"))
+test(776, names(DT$b), c("a","b","c"))  # In future data.table() should drop vector names and this test will change
+DT = data.table(a=1:3,b=c("a","a","b"))
+setattr(DT$b, "names", c("a","b","c"))  # Future proof this test for when data.table() drops names (force them on).
+test(777, names(DT$b), c("a","b","c"))
+test(778, DT[,sum(a),by=b], data.table(b=c("a","b"),V1=c(3L,3L)))  #2307 retained names length 3 on the length 2 vector result causing it not to print.
+test(779, print(DT[,sum(a),by=b]), output="^   b V11: a  32: b  3$")
 
 # TO DO: add examples of multiple LHS (name and position) and multiple RHS to example(":=")
 
