@@ -103,9 +103,15 @@ BUG FIXES
     o   by-without-by with keyed i where key isn't the 1:n columns of i could crash, #2314. Many thanks
         to Garrett See for reporting with reproducible example data file. Tests added.
         
-    o   DT[,col1:=X[Y,col2]] was a seg fault, #2311. Due to RHS being a data.table. mult="first"
+    o   DT[,col1:=X[Y,col2]] was a crash, #2311. Due to RHS being a data.table. mult="first"
         (or drop=TRUE in future) was likely intended. Thanks to Anoop Shah for reporting with
-        reproducible example. Tests added.
+        reproducible example. Root cause (recycling of list columns) fixed and tests added.
+        
+    o   Grouping by a column which somehow has names, no longer causes an error, #2307.
+          DT = data.table(a=1:3,b=c("a","a","b"))
+          setattr(DT$b, "names", c("a","b","c"))  # not recommended, just to illustrate
+          DT[,sum(a),by=b]  # now ok
+        
         
 USER VISIBLE CHANGES
 
